# midterm-report-jroberge16

./: .gitignore  README.md  REPORT.MD  output.txt  pyproject.toml
images/og code/: mermaid and text boxes.md
instructions/: instructions_README.md  instructions_README_tmp.html
instructions/sample_midterm/: Example_README_tmp.html  README.md  ops_pascal_run_c.csv  ops_pascal_run_python.csv  pascal.py  pascalr.c  test_runner.py  timings_pascal_run_c.csv  timings_pascal_run_python.csv
mid_term/analysis/: final_results.csv  graphs.ipynb  summary_stats
mid_term/analysis/results/: c_fib_results.csv  combined_fib_results.csv  python_fib_results.csv
mid_term/c_fib/: fib.c  fib.h  main.c  utils.c  utils.h
mid_term/python_fib/: fib.py  main.py  pyproject.toml  utils.py
test/python_fib/: __init__.py  test_fib.py  test_main.py  test_utils.py
test/test_c_fib/: CON:  NUL:  test_fib_c.c
