[tool.poetry]
name = "python-fib"
version = "0.1.0"
description = "This is Joshua Roberge's Python mid-term"
authors = ["jroberge16 <jwr1015@outlook.com>"]
readme = "README.md"
packages = [{include = "mid_term"}, {include = "test"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.2"
ipykernel = "^6.30.1"
pandas = "^2.3.3"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
ipywidgets = "^8.1.7"
plotly = "^6.3.1"
kaleido = "^1.1.0"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
